--- a/relazione/capI.tex
+++ b/relazione/capI.tex
@@ -35,13 +35,13 @@ Conoscendo il suono prodotto dalle sei corde suonate a vuoto e sapendo che ogni 
 \subsection{Tab}
 La \textit{tab} è una rappresentazione delle corde della chitarra. Una tablatura è solitamente scritta usando sei linee orizzontali, ognuna corrispondente a una corda.\\
 Al contrario dei normali spartiti, su una tablatura non ci sono le note da suonare ma si trovano le indicazioni su dove mettere le dita. I numeri sulle linee corrispondono ai tasti della tastiera. Ad esempio, un "1" sulla prima corda, indica di suonare il Mi cantino tenendo premuto il primo tasto.
-Se il numero è superiore a zero, bisogna premere il tasto corrispondente quando si suonerà quella corda. Se troviamo uno \textbf{zero} allora si suona la corda a vuoto.
+Se il numero è superiore a zero, bisogna premere il tasto corrispondente quando si suonerà quella corda. Se troviamo uno \textbf{zero} allora si suona la corda a vuoto, senza premere alcun tasto.
 \begin{figure}[H]
 	\centering
 	\includegraphics[scale=0.50]{./images/img15.png}
 \end{figure}
 
-Spesso leggendo una tablatura si trovano dei numeri che sono allineati verticalmente. In questo caso si premono i tasti indicati e poi suona le note allo stesso tempo. Le tab vanno lette come libri cioè da sinistra a destra.
+Spesso leggendo una tablatura si trovano dei numeri che sono allineati verticalmente. In questo caso si premono più tasti contemporaneamente. Le tab vanno lette come libri cioè da sinistra a destra.
 \begin{figure}[H]
 	\centering
 	\includegraphics[scale=0.50]{./images/img16.png}
