--- a/relazione/capII.tex
+++ b/relazione/capII.tex
@@ -16,7 +16,7 @@ I tasti che intercorrono fra gli estremi della stessa ottava (esempio \textit{do
 		F_{k}=440Hz \cdot 2^{k \over 12}
 	\end{math}
 \end{center}
-Nel campo della musica viene usata la trasformata a Q costante proprio per la sua natura esponenziale. Inoltre, l'accuratezza della trasformata a Q costante è analoga alla scala logaritmica e imita l'orecchio umano, avendo una risoluzione di frequenza più alta a quelle più basse e una risoluzione più bassa alle frequenze più alte. Infatti, dal seguente grafico si può notare la natura esponenziale della funzione:
+Nel campo della musica viene utilizzata la trasformata a Q costante, a discapito della più nota trasformata di Fourier, proprio per la sua natura esponenziale. Inoltre, l'accuratezza della trasformata a Q costante è analoga alla scala logaritmica e imita l'orecchio umano, avendo una risoluzione di frequenza più alta a quelle più basse e una risoluzione più bassa alle frequenze più alte. Infatti, dal seguente grafico si può notare la natura esponenziale della funzione:
 \begin{center}
 	\begin{tikzpicture}
 	\begin{axis}[ 
