--- a/relazione/titlepage.tex
+++ b/relazione/titlepage.tex
@@ -22,9 +22,7 @@
     \vspace{3mm}
     {\LARGE\textbf{ DI TABLATURE PER CHITARRA}}\\
     \vspace{3mm}
-    {\LARGE{\bf TRAMITE L'USO DI}}\\
-    \vspace{3mm}
-    {\LARGE{\bf SMARTPHONE}}\\
+    {\LARGE{\bf TRAMITE L'USO DI CNN}}\\
     \vspace{10mm} {\large{\sc Corso di Sistemi Digitali M}}
 \end{center}
 \vfill
