--- a/relazione/capII.tex
+++ b/relazione/capII.tex
@@ -5,7 +5,7 @@ Le note musicali si possono classificare nel seguente modo:
 \end{figure}
 La lettera a sinistra identifica la nota musicale mentre il numero a destra rappresenta la sua frequenza.
 
-In musica, un'\textbf{ottava} è l'intervallo di otto note posizionate a frequenza diversa nella scala musicale. Le frequenze intermedie sono altre sei note. Per esempio, il \textit{La3} (A4) ha frequenza di 440 Hz, il \textit{la} posto un'ottava sopra ha frequenza 880 Hz, quello un'ottava sotto ha frequenza 220 Hz.
+In musica, un'\textbf{ottava} è l'intervallo di otto note posizionate a frequenza diversa nella scala musicale. Le frequenze intermedie sono altre sei note. Per esempio, il \textit{La3} (A4) ha frequenza di 440 Hz, il \textit{La} posto un'ottava sopra ha frequenza 880 Hz, quello un'ottava sotto ha frequenza 220 Hz.
 
 Se si rappresentassero le prime sei ottave della nota C potremmo vedere che la sua frequenza raddoppia ad ogni ottava. \\
 \newline
