--- a/relazione/relazione.tex
+++ b/relazione/relazione.tex
@@ -21,6 +21,8 @@ pdfauthor={De Nardi-Tornatore}]{hyperref}
 
 \usepackage{pgfplots} % graphics
 
+%%%%%%%%%%%%%%%%% Python Code %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
 % Default fixed font does not support bold face
 \DeclareFixedFont{\ttb}{T1}{txtt}{bx}{n}{8} % for bold
 \DeclareFixedFont{\ttm}{T1}{txtt}{m}{n}{8} % for normal
@@ -67,6 +69,28 @@ pdfauthor={De Nardi-Tornatore}]{hyperref}
 
 % Python for inline
 \newcommand\pythoninline[1]{{\pythonstyle\lstinline!#1!}}
+
+%%%%%%%%%%%%%%%%% Normal Text Code %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+% normal text style for highlighting
+\newcommand\textnormalstyle{\lstset{
+		backgroundcolor=\color{deepblack},
+		basicstyle=\ttm\color{white},
+		morekeywords={self},              % Add keywords here
+		keywordstyle=\ttm\color{white},
+		emph={MyClass,__init__},          % Custom highlighting
+		emphstyle=\ttm\color{white},    % Custom highlighting style
+		stringstyle=\ttm\color{white},
+		commentstyle=\ttm\color{white},
+		frame=tb,                         % Any extra options here
+		showstringspaces=false,
+    	literate={\ \ }{{\ }}2
+}}
+
+% txt for external files
+\newcommand\textexternal[2][]{{
+		\textnormalstyle
+		\lstinputlisting[#1]{#2}}}
 
 
 %%%%%%%%%%%%%%%%% New Commands %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
