--- a/relazione/capII.tex
+++ b/relazione/capII.tex
@@ -5,11 +5,11 @@ Le note musicali si possono classificare nel seguente modo:
 \end{figure}
 La lettera a sinistra identifica la nota musicale mentre il numero a destra rappresenta la sua frequenza.
 
-In musica, un'\textbf{ottava} è l'intervallo di otto note posizionate a frequenza diversa nella scala musicale. Le frequenze intermedie sono altre sei note. Per esempio, il \textit{La3} (A4) ha frequenza di 440 Hz, il \textit{La} posto un'ottava sopra ha frequenza 880 Hz, quello un'ottava sotto ha frequenza 220 Hz.
+In musica, un'\textbf{ottava} è un intervallo di otto note a partire dal Do fino al Do successivo. La frequenza tra una nota di un'ottava e la stessa nota di un'ottava successiva è doppia. Per esempio, il \textit{La4} (A4) ha frequenza di 440 Hz, il \textit{La5} (A5) posto un'ottava sopra ha frequenza 880 Hz, quello un'ottava sotto (A3) ha frequenza 220 Hz.
 
 Se si rappresentassero le prime sei ottave della nota C potremmo vedere che la sua frequenza raddoppia ad ogni ottava. \\
 \newline
-I tasti che intercorrono fra gli estremi della stessa ottava (esempio \textit{Do3}-\textit{Do4}) sono dodici note per cui la frequenza deve raddoppiare ogni dodici note. Si può rappresentare quanto detto dalla seguente formula: \\
+I tasti che intercorrono fra gli estremi della stessa ottava (esempio \textit{Do3}-\textit{Do4}) sono dodici semitoni, per cui la frequenza deve raddoppiare ogni dodici semitoni. Si può rappresentare quanto detto dalla seguente formula: \\
 
 \begin{center}
 	\begin{math}
