--- a/relazione/conclusioni.tex
+++ b/relazione/conclusioni.tex
@@ -1,4 +1,5 @@
 Sulle due applicazioni sono stati eseguiti diversi \textit{test} e possiamo affermare che l'applicazione si comporta abbastanza bene.
+Ci sono ancora altre problematiche da affrontare per migliorare il sistema come applicare filtri per preprocessare l'audio, per migliorarne la qualità, in modo tale da aiutare il modello a riconoscere correttamente la soluzione.
 Siamo molto soddisfatti del progetto che è stato realizzato. Siamo consapevoli che abbiamo esplorato solo una piccola parte di questa vastissima materia ma quello che abbiamo appreso sarà sicuramente usato come base di partenza in futuri progetti.\\
 \newline
 A fini dimostrativi, forniamo insieme alla documentazione un breve video dell'applicazione in funzione.
